--- a/class353-watched/index.html
+++ b/class353-watched/index.html
@@ -10,8 +10,11 @@
 
   <body>
     <div id="app">
-      <button @click="changeLink">Click to change de link</button>
-      <a :href="link">link</a>
+      <button v-on:click="counter++">Increase</button>
+      <button v-on:click="counter--">Decrease</button>
+      <button v-on:click="secondCounter++">Increase Second</button>
+      <p>Counter {{ counter}} | {{ secondCounter }}</p>
+      <p>Counter {{result()}} | {{ output }}</p>
     </div>
     <script src="scripts.js"></script>
   </body>
