--- a/class355~357-dynamic-css/class/index.html
+++ b/class355~357-dynamic-css/class/index.html
@@ -16,9 +16,9 @@
         @click="attachRed = !attachRed"
         :class="divClasses"
       ></div>
-      <div class="demo" :class="{red: attachRed}"></div>
+      <div class="demo" :class="someclass"></div>
       <div class="demo" :class="[color, {red: attachRed}]"></div>
-      <input type="text" v-model="color" />
+      <input type="text" v-model="someclass" />
     </div>
     <script src="scripts.js"></script>
   </body>
