--- a/section25-conditional-and-rendering-lists/index.html
+++ b/section25-conditional-and-rendering-lists/index.html
@@ -14,6 +14,28 @@
       <p v-else>3</p>
       <p>4</p>
       <button @click="show = !show">Press me</button>
+      <p>show value is {{show}}</p>
+      <p>!show value is {{!show}}</p>
+      <template v-if="!show">
+        <p>Very good example !show {{show}}</p>
+        <p>Very good example !show {{show}}</p>
+        <p>Very good example !show {{show}}</p>
+      </template>
+      <template v-if="show">
+        <p>Very good example show {{show}}</p>
+        <p>Very good example show {{show}}</p>
+        <p>Very good example show {{show}}</p>
+      </template>
+      <span v-show="show">
+        <p>v-show v-show v-show</p>
+        <p>v-show v-show v-show</p>
+        <p>v-show v-show v-show</p>
+      </span>
+      <span v-show="!show">
+        <p>!vshow !vshow !vshow</p>
+        <p>!vshow !vshow !vshow</p>
+        <p>!vshow !vshow !vshow</p>
+      </span>
     </div>
     <script src="app.js"></script>
   </body>
